fixed alignment of back button for register page

--- a/static/portal/css/portal.css
+++ b/static/portal/css/portal.css
@@ -46,5 +46,5 @@
 .registerrow {
     text-align: center;
     display: inline-flex;
-    width: 450px;
+    width: 435px;
 }
